test media query

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,12 +19,15 @@
       "article aside"
       "footer footer";
   }
+  main{
+    width: 100%;
+  }
   
   
   header {
     grid-area: header;
     background-color: rgba(101, 0, 0, 0.438);
-    padding: 10px;
+    
     color: white;
     text-align: center;
     height: 250px;
@@ -35,7 +38,7 @@
     grid-area: nav;
     height:100px;
     background-color: rgb(31, 0, 0);
-    padding: 10px;
+   
     color: white;
     text-align: center;
   }
@@ -44,7 +47,7 @@
   section {
     grid-area: section;
     background-color: rgba(17, 17, 17, 0.285);
-    padding: 10px;
+ 
     color: black;
     height: 500px;
     width: 100%;
@@ -78,3 +81,76 @@
     color: white;
     text-align: center;
   }
+  @media (max-width: 768px) {
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box; /* Ajouté pour éviter les problèmes de dimensionnement */
+    }
+
+    .conteneur {
+        display: grid;
+        grid-template-columns: 30% 70%; /* 2 colonnes pour la version mobile */
+        grid-template-rows: 1fr 1fr 1fr 2fr 1fr; /* 5 rangées pour les éléments */
+        grid-template-areas:
+            "header header"
+            "nav section"
+            "nav article"
+            "aside aside"
+            "footer footer"; 
+        min-height: 100vh; /* Remplace height par min-height pour une flexibilité totale */
+    }
+
+    main {
+        width: 100%;
+    }
+
+    header {
+        grid-area: header;
+        background-color: rgba(101, 0, 0, 0.438);
+        color: white;
+        text-align: center;
+        
+        width: 100%;
+    }
+
+    nav {
+        grid-area: nav;
+        background-color: rgb(31, 0, 0);
+        width: 100%;
+        color: white;
+        text-align: center;
+         height:100%;
+    }
+
+    section {
+        grid-area: section;
+        background-color: rgba(17, 17, 17, 0.285);
+        color: black;
+      
+    }
+
+    article {
+        grid-area: article;
+        background-color: rgb(21, 20, 20);
+        width: 100%;
+        /* Conserve la hauteur fixe pour l'article */
+    }
+
+    aside {
+        grid-area: aside;
+        background-color: grey;
+        color: white;
+       
+        width: 100%;
+    }
+
+    footer {
+        grid-area: footer;
+        background-color: black;
+       
+        color: white;
+        text-align: center;
+        width: 100%;
+    }
+}
