--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@
     color: white;
     text-align: center;
     height: 250px;
+
   }
   
 
@@ -40,8 +41,25 @@
     background-color: rgb(31, 0, 0);
    
     color: white;
-    text-align: center;
+   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align:center;
+   
+    
+    
   }
+  .nav-item {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white;
+    text-align: center;
+      padding-top:1em;
+  font-size:30px;
+    flex-grow: 1; /* Chaque item prend de l'espace disponible */
+    flex-shrink: 1; /* Chaque item peut se rétrécir si nécessaire */
+    flex-basis: 16%; /* Chaque item prendra environ 16% de la largeur du conteneur */
+}
   
   
   section {
@@ -81,6 +99,7 @@
     color: white;
     text-align: center;
   }
+  
   @media (max-width: 768px) {
     * {
         margin: 0;
@@ -121,7 +140,20 @@
         color: white;
         text-align: center;
          height:100%;
+         display: flex;
+         flex-direction:column;
     }
+    nav {
+      flex-direction: column; /* Change la direction des éléments en vertical sur mobile */
+    
+  }
+
+  .nav-item {
+      flex-grow: 1; /* L'élément prend toute la place disponible */
+      flex-shrink: 0; /* L'élément ne rétrécit pas en-dessous de la taille du contenu */
+      width: 100%; /* Occupe toute la largeur du parent */
+      text-align: center;
+  }
 
     section {
         grid-area: section;
@@ -143,6 +175,7 @@
         color: white;
        
         width: 100%;
+        height: 500px;
     }
 
     footer {
