--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,11 @@
     
     
   }
+  img{
+
+    width: 100%;
+    height: 100%;
+  }
   .nav-item {
     background-color: rgba(255, 255, 255, 0.1);
     color: white;
