--- a/css/styles.css
+++ b/css/styles.css
@@ -26,8 +26,8 @@
   
   header {
     grid-area: header;
-    background-color: rgba(101, 0, 0, 0.438);
-    
+    background-color: rgba(50, 0, 0, 0.553);
+    font-size: 10vw;
     color: white;
     text-align: center;
     height: 250px;
@@ -51,9 +51,11 @@
     
   }
   img{
-
-    width: 100%;
-    height: 100%;
+    width: 80px;
+    float: right;
+    height:80px;
+    padding: 15px;
+    border-radius:  50%; ;
   }
   .nav-item {
     background-color: rgba(255, 255, 255, 0.1);
@@ -70,12 +72,35 @@
   section {
     grid-area: section;
     background-color: rgba(17, 17, 17, 0.285);
- 
     color: black;
     height: 500px;
     width: 100%;
-  
+     font-size: 4vw;
+     padding: 0.3em;
   }
+  .nometcabane
+  {display: flex;
+    justify-content:space-evenly;
+    flex-direction:row;
+    align-items: center;
+  }
+
+  #photocabane{
+    width: 80px;
+    float:none;
+    height:80px;
+    padding:0px;
+    border-radius:  50%; ;
+  }
+  p{
+    font-size: 2.5vw;
+    padding:7px;
+    
+    margin-top:1em;
+
+
+  }
+  
   
   
   aside {
@@ -134,10 +159,16 @@
         background-color: rgba(101, 0, 0, 0.438);
         color: white;
         text-align: center;
-        
+        align-content: center;
         width: 100%;
     }
+      img{
 
+        padding:5px;
+        float: right;
+        float:top;
+        
+      }
     nav {
         grid-area: nav;
         background-color: rgb(31, 0, 0);
@@ -147,6 +178,7 @@
          height:100%;
          display: flex;
          flex-direction:column;
+         justify-content: space-around;
     }
     
   .nav-item {
@@ -155,15 +187,25 @@
       width: 100%; /* Occupe toute la largeur du parent */
       text-align: center;
       font-size: 6vw;
+      padding-top:1vw;
+     
+   
+    flex-basis: 16%;
+      
   }
 
     section {
         grid-area: section;
         background-color: rgba(17, 17, 17, 0.285);
         color: black;
+        font-size: 6vw;
       
     }
+    p{
+       font-size:3.8vw;
 
+
+    }
     article {
         grid-area: article;
         background-color: rgb(21, 20, 20);
