--- a/css/styles.css
+++ b/css/styles.css
@@ -116,8 +116,14 @@
     grid-area: article;
     background-color: rgb(21, 20, 20);
     width:100%;
-    height:500px
+    height:500px;
+    color:white;
    
+    
+  }
+  h4{font-size: 3vw;
+    padding: 0.5em;
+
     
   }
   
