--- a/css/styles.css
+++ b/css/styles.css
@@ -107,8 +107,23 @@
     grid-area: aside;
     background-color: grey;
    
-    color: white;
+    color: black;
     
+  }
+  ul{
+    padding:20px 15px 20px 40px;
+    font-size: 2.8vw;
+
+  }
+  .interne{
+    list-style-type:square;
+  }
+  .externe{
+    list-style-type:circle;
+  }
+  h5{
+    font-size: 2.5vw;
+     padding:15px;
   }
   
   
@@ -121,10 +136,24 @@
    
     
   }
-  h4{font-size: 3vw;
+  h4{font-size: 4vw;
     padding: 0.5em;
 
     
+  }
+  #conteneurprojets{
+display:flex;
+justify-content:space-evenly;
+    flex-direction:row;
+    align-items: center;
+    justify-content:space-around;
+     margin-top: 15%;
+  }
+  projet{
+
+
+
+
   }
   
   
@@ -216,9 +245,23 @@
         grid-area: article;
         background-color: rgb(21, 20, 20);
         width: 100%;
-        /* Conserve la hauteur fixe pour l'article */
+        
+      
+      
     }
-
+     h4{
+      font-size: 5vw;
+     }
+     #conteneurprojets{
+             display:flex;
+             float: top;
+            flex-direction:column;
+             
+             gap: 20px; 
+               
+         
+        }
+       
     aside {
         grid-area: aside;
         background-color: grey;
@@ -227,6 +270,12 @@
         width: 100%;
         height: 500px;
     }
+   
+    h5{
+      font-size: 7vw;
+       padding:15px;
+    }
+    
 
     footer {
         grid-area: footer;
