--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,16 @@
     padding: 0;
 
   }
+  a {
+    color: white; 
+    text-decoration: none;
+}
+
+
+a:hover {
+    color: blue;
+    text-decoration: none;
+}
 
 
   .conteneur {
@@ -148,6 +158,7 @@ justify-content:space-evenly;
     align-items: center;
     justify-content:space-around;
      margin-top: 15%;
+     font-size:2vw;
   }
   projet{
 
@@ -163,6 +174,18 @@ justify-content:space-evenly;
     height: 80px;
     color: white;
     text-align: center;
+  }
+  #sources{
+
+    float: left;
+    padding:50px 0px 5px 5px;
+  }
+  #réalisation{
+
+    display:inline-block;
+    float: right;
+    padding:15px;
+    
   }
   
   @media (max-width: 768px) {
@@ -246,6 +269,7 @@ justify-content:space-evenly;
         background-color: rgb(21, 20, 20);
         width: 100%;
         
+        
       
       
     }
@@ -256,7 +280,7 @@ justify-content:space-evenly;
              display:flex;
              float: top;
             flex-direction:column;
-             
+            font-size:3vw;
              gap: 20px; 
                
          
