--- a/css/stylessource.css
+++ b/css/stylessource.css
@@ -98,7 +98,7 @@ a:hover {
         display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #ffffff;            
+       background-color: black;          
         border: 1px solid #060606;
         font-weight: bold;
         font-size: 2.5vh;
@@ -122,7 +122,7 @@ a:hover {
     }
     
     .grid-section > div:nth-child(even) {
-        background-color: #eaeaea; 
+        background-color: #312323; 
     }
       article{
 height: 100px;
@@ -156,7 +156,10 @@ height: 100px;
 
 
  
-  
+  a{
+
+    margin:20px;
+  }
   
 
     
@@ -170,7 +173,7 @@ height: 100px;
   footer {
     grid-area: footer;
     background-color: black;
-    height: 80px;
+    height: 100px;
     color: white;
     text-align: center;
   }
